--- a/breed-detail.html
+++ b/breed-detail.html
@@ -48,7 +48,7 @@ document.addEventListener("deviceready", checkdeviceLogin, false);
       </div>
       <div class="modal-body">
         <ul>
-         <li><a href="javascript:void(0);" onClick="report('photo');"><img src="images/photo.png"><span> Inapproprite Photos</span></a></li>
+         <li><a href="javascript:void(0);" onClick="report('photo');"><img src="images/photo.png"><span> Inappropriate Photos</span></a></li>
          <li><a href="javascript:void(0);" onClick="report('spam');"><img src="images/spam.png"><span> Feels like Spam</span></a></li>
          <li><a href="javascript:void(0);" onClick="showModal('report_other');"><img src="images/other.png"><span> Other</span></a></li>
         </ul>
