--- a/chat.html
+++ b/chat.html
@@ -13,7 +13,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/function.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script type="text/javascript"> 
+<script type="text/javascript">
  function checkdeviceLogin(){
 	checkLogin();
 	loadChat();
@@ -66,6 +66,8 @@ $.ajax({
 
 function addChat(){
 var message = $('#chat_txt').val();
+$('#chat_txt').trigger('click');
+
 if(message != ''){
 $('#chat_txt').val('');
 $.ajax({
@@ -79,8 +81,8 @@ $.ajax({
 			 
 			  setTimeout(function (){
 				  var box = document.querySelector('.chats'),
-    		targetElm = document.querySelector('.show_most_bottom');
-			targetElm.scrollIntoView();
+					targetElm = document.querySelector('.show_most_bottom');
+					targetElm.scrollIntoView();
 				//$('#chats').animate({scrollTop: $('#chats')[0].scrollHeight}, "slow");
 			},2000);		 
 	   }
