--- a/swipe.html
+++ b/swipe.html
@@ -54,7 +54,7 @@ document.addEventListener("deviceready", checkWhenready, false);
       <div class="modal-body">
       <input type="hidden" name="report_prof_id" id="report_prof_id">
         <ul>
-         <li><a href="javascript:void(0);" onClick="report('photo');"><img src="images/photo.png"><span> Inapproprite Photos</span></a></li>
+         <li><a href="javascript:void(0);" onClick="report('photo');"><img src="images/photo.png"><span> Inappropriate Photos</span></a></li>
          <li><a href="javascript:void(0);" onClick="report('spam');"><img src="images/spam.png"><span> Feels like Spam</span></a></li>
          <li><a href="javascript:void(0);" onClick="showModal('report_other');"><img src="images/other.png"><span> Other</span></a></li>
         </ul>
