--- a/chat.html
+++ b/chat.html
@@ -84,6 +84,7 @@ $.ajax({
 					targetElm = document.querySelector('.show_most_bottom');
 					targetElm.scrollIntoView();
 				//$('#chats').animate({scrollTop: $('#chats')[0].scrollHeight}, "slow");
+				$('#chat_txt').trigger('click');
 			},2000);		 
 	   }
     });
