--- a/chat.html
+++ b/chat.html
@@ -80,14 +80,14 @@ $.ajax({
 	 success: function(data){
 			 $('.chats').html(data['success']);
 			 
-			  setTimeout(function (){
+			  //setTimeout(function (){
 				  var box = document.querySelector('.chats'),
 					targetElm = document.querySelector('.show_most_bottom');
 					targetElm.scrollIntoView();
 				//$('#chats').animate({scrollTop: $('#chats')[0].scrollHeight}, "slow");
 				$('#chat_txt').focus();
 				$('#chat_txt').trigger('click');
-			},2000);		 
+			//},2000);		 
 	   }
     });
   }
