--- a/profile-info.html
+++ b/profile-info.html
@@ -23,15 +23,15 @@
         <h1 class="red">PROFILE INFO</h1>
             <div class="form-group">
                 <label><span class="reqfield">*</span>Owner Name:</label>
-                <input type="text" name="name" id="name" tabindex="1" class="form-control" placeholder="Please enter owner name.">
+                <input type="text" name="name" id="name" tabindex="1" class="form-control" placeholder="Please enter owner name">
             </div>
             <div class="form-group">
                 <label><span class="reqfield">*</span>Pet Name:</label>
-                <input type="text" name="petname" id="petname" tabindex="2" class="form-control" placeholder="Please enter pet name.">
+                <input type="text" name="petname" id="petname" tabindex="2" class="form-control" placeholder="Please enter pet name">
             </div>            
             <div class="form-group">
                 <label><span class="reqfield">*</span>Pet Age <small>(Number Only)</small>:</label>
-                <input type="number" name="petage" id="petage" placeholder="Please enter pet age." maxlength="2" class="form-control">
+                <input type="number" name="petage" id="petage" placeholder="Please enter pet age" maxlength="2" class="form-control">
             </div>            
             <div class="form-group">
                 <label>Tell us about your pet</label>
@@ -95,7 +95,7 @@
             <input type="hidden" name="pet_image_4" id="pet_image_4"> 
              </div>
 			</div>
-              <p class="error_msg" style="display:none;">Please upload pet main image.</p>                
+              <p class="error_msg" style="display:none;">Please upload pet main image</p>                
             </div>
             <button type="button" class="btn btn-danger btn-block" onClick="addProfileinfo();">SUBMIT</button>        
     </div>
