--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,7 @@
 document.addEventListener("deviceready", checkdeviceLogin, false);
 </script>
 </head>
-<body class="chat-application onlyforchat">
+<body class="chat-application onlyforchat" onLoad="loadChat();">
 <nav class="navbar navbar-expand-lg navbar-light bg-light navmainsection">
 <img src="images/menu-logo.png"/>
 <a href="your-connections.html" class="backbtn">Back</a>
@@ -119,6 +119,16 @@ $(document).ready(function(e){
 		loadChat();
 		messageCount(login_id);
 	},3000);
+	
+	
+});
+
+$('textarea').blur(function() {
+  setTimeout(function() {
+    if (!$(document.activeElement).is('textarea')) {
+      $(window).scrollTop(0,0);
+    }
+  }, 0);
 });
 </script>
 </body>
