--- a/view-profile.html
+++ b/view-profile.html
@@ -42,7 +42,7 @@ document.addEventListener("deviceready", checkWhenready, false);
   </div>
 </nav>
 <div class="container">
-  <div id="my_profile">
+  <div id="my_profile" class="viewprofmain">
     
   </div>
 </div>
