--- a/login.html
+++ b/login.html
@@ -12,13 +12,10 @@
 <link rel="stylesheet" href="css/owl.carousel.css">
 <link rel="stylesheet" href="css/style.css">
 <script type="text/javascript" src="cordova.js"></script>
-<script src="js/jquery.min.js"></script>
-<script src="js/function.js"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/function.js"></script>
 </head>
 <body onLoad="Imgslider();">
-
-
-
 <div class="login-screen">
     <div class="container">
         <h1>Discover New And Interesting<br>
@@ -38,8 +35,8 @@
         
     </div>
 </div>
-<script src="js/bootstrap.min.js"></script> 
-<script src="js/owl.carousel.js"></script> 
+<script type="text/javascript" src="js/bootstrap.min.js"></script> 
+<script type="text/javascript" src="js/owl.carousel.js"></script> 
 <script type="text/javascript">
 function Imgslider(){
 $.ajax({
