--- a/profile-info.html
+++ b/profile-info.html
@@ -11,8 +11,8 @@
 <link rel="stylesheet" href="css/style.css">
 <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/function.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/function.js"></script>
 <script type="text/javascript">
  checkLogin();
 </script>
