--- a/swipe.html
+++ b/swipe.html
@@ -14,9 +14,9 @@
 <link rel="stylesheet" href="css/swiper.css">
 <link rel="stylesheet" href="css/main.css">
 <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/function.js"></script> 
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/function.js"></script> 
 <script type="text/javascript">
 function checkWhenready(){	
 	checkLogin();
