--- a/phone-login.html
+++ b/phone-login.html
@@ -112,7 +112,10 @@ function showContainer(div_to_show){
 function loginNow(){
 	var customer_mobile = $('#customer_mobile').val();
 	var isdcode = $('#isdcode').val();
-	var action_url = siteurl + 'account/login';			
+	var action_url = siteurl + 'account/login';
+	
+	alert(action_url);
+				
 	$.ajax({
 	 type: 'POST',
 	 url: action_url,
