--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta http-equiv="Content-Security-Policy">
 <meta name="description" content="">
 <meta name="author" content="">
 <title>Animal App</title>
