--- a/login.html
+++ b/login.html
@@ -40,13 +40,17 @@
 <script type="text/javascript" src="js/owl.carousel.js"></script> 
 <script type="text/javascript">
 function Imgslider(){
+	alert('Function called');
+	
 $.ajax({
 	 type: 'POST',
 	 url: siteurl + 'common/common/slider',
 	 dataType: 'json',
 	 data: {image:'img'},
 	 crossDomain: true,
-	 success: function(data){	 
+	 success: function(data){
+		 
+		 alert('ajax response');	 
 		
 	   	if(data['success'])
 		{			
