--- a/login.html
+++ b/login.html
@@ -12,9 +12,6 @@
 <link rel="stylesheet" href="css/owl.theme.default.css">
 <link rel="stylesheet" href="css/owl.carousel.css">
 <link rel="stylesheet" href="css/style.css">
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/function.js"></script>
-<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 </head>
 <body onLoad="Imgslider();">
 <div class="login-screen">
@@ -36,21 +33,20 @@
         
     </div>
 </div>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/function.js"></script>
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script> 
-<!--<script type="text/javascript" src="js/owl.carousel.js"></script> -->
+<script type="text/javascript" src="js/owl.carousel.js"></script> 
 <script type="text/javascript">
-function Imgslider(){
-	alert('Function called');
-	
+function Imgslider(){		
 $.ajax({
 	 type: 'POST',
 	 url: siteurl + 'common/common/slider',
 	 dataType: 'json',
 	 data: {image:'img'},
 	 crossDomain: true,
-	 success: function(data){
-		 
-		 alert('ajax response');	 
+	 success: function(data){	
 		
 	   	if(data['success'])
 		{			
