--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link rel="stylesheet" href="css/style.css">
-<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" src="js/function.js"></script>
-<script type="text/javascript" type="text/javascript">
+<script type="text/javascript">
 function checkWhenready(){	
-	cordova.plugins.notification.badge.hasPermission(function (gr) {		
+
+
+	/*cordova.plugins.notification.badge.hasPermission(function (gr) {		
 		if(gr){                
 			cordova.plugins.notification.badge.configure({smallIcon:'icon',indicator:'circular'});					
          }else{
@@ -22,7 +24,7 @@ function checkWhenready(){
 			   
 			});
 		}
-	});
+	});*/
 	
 	
 	
@@ -62,17 +64,16 @@ document.addEventListener("deviceready", checkWhenready, false);
 
 <body>
 <div class="full-height center">
-    <div class="loding-logo"><img src="images/loading-logo.png"></div>
+  <div class="loding-logo"><img src="images/loading-logo.png"></div>
 </div>
-
-<div class="container"> 
- <div class="modal fade modelcommon model_center_pop_up" id="modal_error" role="dialog">
-              <div class="modal-content">               
-                <div id="common_popup"></div>
-                 <button class="ok_onfirm_btn" data-dismiss="modal">OK</button>
-              </div>
-        </div>
+<div class="container">
+  <div class="modal fade modelcommon model_center_pop_up" id="modal_error" role="dialog">
+    <div class="modal-content">
+      <div id="common_popup"></div>
+      <button class="ok_onfirm_btn" data-dismiss="modal">OK</button>
+    </div>
   </div>
+</div>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
