--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta http-equiv="Content-Security-Policy">
+<meta http-equiv="Content-Security-Policy" content="*">
 <meta name="description" content="">
 <meta name="author" content="">
 <title>Animal App</title>
@@ -34,9 +34,9 @@
     </div>
 </div>
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script> 
 <script type="text/javascript" src="js/owl.carousel.js"></script> 
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" src="js/function.js"></script>
 <script type="text/javascript">
 function Imgslider(){		
@@ -60,8 +60,7 @@ $.ajax({
 			})			
 		}
 	 }
-   });	
-	
+   });		
 }
 </script>
 </body>
