--- a/login.html
+++ b/login.html
@@ -16,8 +16,7 @@
 <body onLoad="Imgslider();">
 <div class="login-screen">
     <div class="container">
-        <h1>Discover New And Interesting<br>
-            <span class="red"> Pet Animals Nearby</span></h1>
+        <h1>Find new pet friends near by<!-- <br><span class="red"> Pet Animals Nearby</span>--></h1>
             
         <div class="login-slider">
             <div class="owl-carousel owl-theme" id="slider_img"></div>
