--- a/no_results.html
+++ b/no_results.html
@@ -45,9 +45,9 @@ document.addEventListener("deviceready", checkWhenready, false);
 </nav>
 <div class="container">
     <div class="your-connections mt-4">
-        <h1 class="red">No results found.</h1>
+        <h1 class="red">No results found based on search criteria.</h1>
         <div class="table-responsive mb-3">
-            <p class="noresults">Sorry, no result found as per your profile setting. Please update your breed profile.</p>
+            <p class="noresults">When more friends join the app you will get better search results.</p>
         </div>
     </div>
 </div>
