--- a/edit-profile.html
+++ b/edit-profile.html
@@ -124,11 +124,11 @@ document.addEventListener("deviceready", checkWhenready, false);
                 </div> 
             
             <div class="form-group">
-                <label><span class="reqfield">*</span>who do you want to<br> play/breed with </label>
+                <label><span class="reqfield">*</span>Who would like your pet to meet with? </label>
                 <select class="form-control" name="who_play_breed" id="who_play_breed" tabindex="6">
-                    <option value="0">Any Pet </option>
-                    <option value="1">Just my breed </option>
-                    <option value="2">Specific breed </option>
+                    <option value="0">Any breed </option>
+                    <option value="1">My breed </option>
+                    <option value="2">A specific breed </option>
                 </select>
             </div>
             
