--- a/profile-info.html
+++ b/profile-info.html
@@ -30,7 +30,7 @@
                 <input type="text" name="petname" id="petname" tabindex="2" class="form-control" placeholder="Please enter pet name">
             </div>            
             <div class="form-group">
-                <label><span class="reqfield">*</span>Pet Age <small>(Number Only)</small>:</label>
+                <label><span class="reqfield">*</span>Pet Age <small>(Years only)</small>:</label>
                 <input type="number" name="petage" id="petage" placeholder="Please enter pet age" maxlength="2" class="form-control">
             </div>            
             <div class="form-group">
