--- a/your-connections.html
+++ b/your-connections.html
@@ -131,17 +131,15 @@ document.addEventListener("deviceready", checkWhenready, false);
         <p>Are you sure want to delete?</p>
         <input type="hidden" name="del_profile" id="del_profile">
         <div class="row">
-        <div class="col-md-4"><button onClick="deleteProfile();" class="ok_onfirm_btn">Ok</button></div>
-        <div class="col-md-4"><button data-dismiss="modal" class="ok_onfirm_btn">Cancel</button></div>
+        <button onClick="deleteProfile();">Ok</button>&nbsp;&nbsp;
+        <button data-dismiss="modal">Cancel</button>
       </div>
     </div>
   </div>
 </div>
  
  <!-- end -->
- 
- 
-</div>
+ </div>
 <div class="bottom-fixed-bar" id="bottom_bar">
     <div class="container">
         <table class="table">
