--- a/your-connections.html
+++ b/your-connections.html
@@ -130,7 +130,7 @@ document.addEventListener("deviceready", checkWhenready, false);
       	<div class="modal-body">
         <p>Are you sure want to delete?</p>
         <input type="hidden" name="del_profile" id="del_profile">
-        <div class="row">
+        <div>
         <button onClick="deleteProfile();">Ok</button>&nbsp;&nbsp;
         <button data-dismiss="modal">Cancel</button>
       </div>
